<resources>
    <string name="app_name">AddressBook_App</string>
    <string name="action_settings">Settings</string>
    <string name="menuitem_edit">Editar</string>
    <string name="menuitem_delete">Eliminar</string>
    <string name="hint_name_required">Nombre (requerido)</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_street">Calle</string>
    <string name="hint_city">Ciudad</string>
    <string name="hint_comuna">Comuna</string>
    <string name="label_name">Nombre:</string>
    <string name="label_email">Email:</string>
    <string name="label_phone">Teléfono:</string>
    <string name="label_street">Calle:</string>
    <string name="label_city">Ciudad:</string>
    <string name="label_comuna">Comuna:</string>
    <string name="confirm_title">¿Estás seguro/a?</string>
    <string name="confirm_message">Se eliminará el contacto permanentemente</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_delete">Eliminar</string>
    <string name="contact_added">Contacto agregado exitosamente</string>
    <string name="contact_not_added">El contacto no fue agregado debido a un error</string>
    <string name="contact_updated">Contcato actualizado</string>
    <string name="contact_not_updated">El contacto no fue actualizado debido a un error</string>
    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="insert_failed">Insert failed: s</string>
</resources>
